# gimpisep-les-gens-sympas

./: .gitignore  CMakeLists.txt  README.md  main.cpp
GimpLikeGUI/: CMakeLists.txt  main.cpp
GimpLikeGUI/Headers/: CustomButton.h  MainWindow.h  Window.h
GimpLikeGUI/Sources/: CustomButton.cpp  MainWindow.cpp  Window.cpp
TPs/TP2/students_programs/: save_grey_students.cpp
TPs/TP3/student programs_TP3/: bright_contr_students.cpp  bright_video_students.cpp  brightness_students.cpp  contrast_image_students.cpp  contrast_video_students.cpp  rotate_video_students.cpp
TPs/TP4/students programs/: drawBox_students.cpp  drawShape.cpp  mouse_circle_students.cpp  mouse_students.cpp
TPs/TP5/students programs/: students_blur.cpp  students_gaussian.cpp  students_gaussian_video.cpp  students_video_blur.cpp
fake-gimp/: fake-gimp.sln
fake-gimp/fake-gimp/: CannyThreshold.cpp  FaceDetection.cpp  Header.h  Stitching.cpp  Thumbs.db  brightness.cpp  dilateErose.cpp  dilate_erose.cpp  fake-gimp.cpp  fake-gimp.vcxproj  fake-gimp.vcxproj.filters  haarcascade_frontalface.xml  resize.cpp
gimpisep_les_gens_sympas/: CMakeLists.txt  Header.h  main.cpp
gimpisep_les_gens_sympas/Functions/: CannyThreshold.cpp  FaceDetection.cpp  brightness.cpp  contrast.cpp  dilateErode.cpp  resize.cpp  stitching.cpp
